syntax = "proto3";
package robot.webhook;
option go_package = "github.com/Duke1616/alertmanager-wechat-robot/apps/webhook";
import "google/protobuf/timestamp.proto";
import "google/protobuf/Empty.proto";

service RPC {
    // 报警信息转换
    rpc TransformAlert(TransData) returns(google.protobuf.Empty);
}

message TransData {
  // 如果至少有一个警报正在触发，则定义为触发，否则已解决
  // @gotags: bson:"status" json:"status"
  string status = 1;
  // 接收者
  // @gotags: bson:"receiver" json:"receiver"
  string receiver = 2;
  // 组标签
  // @gotags: bson:"groupLabels" json:"groupLabels"
  map<string, string> group_labels = 3;
  // 通用标签
  // @gotags: bson:"commonLabels" json:"commonLabels"
  map<string, string> common_labels = 4;
  // 通用注解
  // @gotags: bson:"commonAnnotations" json:"commonAnnotations"
  map<string, string> common_annotations = 5;
  // 外部网址
  // @gotags: bson:"externalURL" json:"externalURL"
  string external_url = 6;
  // 警报信息
  // @gotags: bson:"alerts" json:"alerts"
  repeated Alert alerts = 7;
}


message Alert {
  // 定义警报是已解决还是正在触发
  // @gotags: bson:"status" json:"status"
  string status = 1;
  // 标签
  // @gotags: bson:"labels" json:"labels"
  map<string, string> labels = 2;
  // 注释
  // @gotags: bson:"annotations" json:"annotations"
  map<string, string> annotations = 3;
  // 开始时间
  // @gotags: bson:"startsAt" json:"startsAt"
  optional google.protobuf.Timestamp starts_at = 4;
  // 结束时间
  // @gotags: bson:"endsAt" json:"endsAt"
  optional google.protobuf.Timestamp ends_at = 5;
  // 标识此警报的引起实体的反向链接
  // @gotags: bson:"generatorURL" json:"generatorURL"
  optional string generatorURL = 6;
  // 可用于识别警报的指纹
  // @gotags: bson:"fingerprint" json:"fingerprint"
  optional string fingerprint = 7;
  // 通知人
  // @gotags: bson:"users" json:"users"
  repeated string users = 8;
}

message TransformAlertData  {
  // 报警目的ID
  // @gotags: bson:"target_id" json:"target_id"
  string target_id = 1;
  // 通知人
  // @gotags: bson:"users" json:"users"
  repeated string users = 2;
  // 报警组合信息
  // 警报信息
  // @gotags: bson:"alerts" json:"alerts"
  repeated Alert alerts = 3;
}


message TransformAlertDataSet {
  // 总数量
  // @gotags: bson:"total" json:"total"
  int64 total = 1;
  // 数据
  // @gotags: bson:"items" json:"items"
  repeated TransformAlertData items = 2;
}
